fixes alignment of dates with new font size

--- a/github-resume.css
+++ b/github-resume.css
@@ -149,7 +149,7 @@ blockquote {
 
   position: relative;
   font-weight: bold;
-  bottom: 26px;
+  bottom: 20px;
 }
   blockquote p{
     position :absolute;
